--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 asgiref==3.8.1
 cloudinary==1.41.0
+crispy-bootstrap4==2024.10
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2.16
+django-braces==1.16.0
+django-crispy-forms==2.3
+django-model-utils==5.0.0
+django-star-ratings==0.9.2
+django-summernote==0.8.20.0
 gunicorn==20.1.0
 psycopg==3.2.3
 recipes==0.1
 sqlparse==0.5.2
+swapper==1.4.0
 urllib3==1.26.20
 whitenoise==5.3.0
-django-summernote==0.8.20.0
